# edge_detection_ROS

./: .gitignore  CMakeLists.txt  README.md  package.xml
data/edge_detection_data/: README.md
launch/: edge_bag_rviz.launch  edge_service.launch  edge_task3.launch
scripts/: edge_points_node.py  edge_service_client.py  edge_service_node.py  rgb_edge_node.py  run_edge_detection.py
src/: edge_detector.py
srv/: DetectEdges.srv
