<?xml version="1.0"?>
<package format="2">
  <name>edge_detector_pkg2</name>
  <version>0.0.0</version>
  <description>edge detector + ROS service + RViz point cloud publisher</description>

  <maintainer email="ryangilberttt@gmail.com">ryan</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- we build services -->
  <build_depend>message_generation</build_depend>

  <!-- normal runtime/build deps -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
